@@ -64,10 +64,16 @@ test "camlp4.opt"
   ~matching:[M.x "dummy.native" ~output:"Hello"]
   ~targets:("dummy.native",[]) ();;
 
-test "TagsErrorMessage"
-  ~description:"Confirm relevance of an error message due to erronous _tags"
-  ~failing_msg:"Failure: lexing: empty token."
-  ~tree:[T.f "_tags" ~content:"* : not_hygienic"]
-  ~targets:("none.native",[]) ();;
+let tag_pat_msgs =
+  ["*:a", "File \"_tags\", line 1, column 0: Lexing error: Invalid globbing pattern \"*\".";
+   "\n<*{>:a", "File \"_tags\", line 2, column 0: Lexing error: Invalid globbing pattern \"<*{>\".";
+   "<*>: ~@a,# ~a", "File \"_tags\", line 1, column 10: Lexing error: Only ',' separated tags are alllowed."];;
+
+List.iteri (fun i (content,failing_msg) ->
+  test (Printf.sprintf "TagsErrorMessage_%d" (i+1))
+    ~description:"Confirm relevance of an error message due to erronous _tags"
+    ~failing_msg
+    ~tree:[T.f "_tags" ~content; T.f "dummy.ml"]
+    ~targets:("dummy.native",[]) ()) tag_pat_msgs;;
 
 run ~root:"_test";;
